28.sep (ws)
      - limit values in time signature wizard to 6 bit (1-63)
        (#7315)
25.sep (db)
      - fix #6649: Transposition when creating a score from a template

 ======== MuseScore 0.9.6.3 released ==============
24.sep (la)
      - fix #7150: Changing soundfont does not work for audio export
23.sep (la)
      - fix #7233: Transpose by diminished second doesn't work (0.9.6 branch regression)
      - fix #7232: D.S. after coda sign freezes playback
23.sep (la)
      - Apply patch for ARM qreal bug
22.sep (ws)
      - tuplet bracket was only movable in x-direction in edit mode
      (la)
      - fix #7211: Copy/Paste notes over rest of diff. durations in staves
21.sep (la)
      - fix #7167: Time signature change causes triplets to corrupt score
      - fix #7142: Crescendo & delete measures problems
      - fix #7197: MuseScore fails to open MSCZ files with capitals
      - fix #6932: Changing notehead of a breve crash
      - add access to DPI, notehead, note bounding box and note position from plugin framework
            (Patch by Mikhail Eliseev)
14.sep (la)
      - fix #7077: Applying double-note tremolo to dotted notes fails and alter measure duration
30.aug (db)
      - fix #6937: Measure Properties should be modal dialog
29.aug (la)
      - fix #6775: Seg. fault by double clicking any element twice
      - fix #6888: When exchanging voice, voice 1 is removed
28.aug (la)
      - fix get keysig from plugin when concert pitch mode is set
24.aug (ws)
      - applied patch to rendermidi.cpp from Hugo Scott Whittle
22.aug (db)
      - fix #6735: C# for AltoSax in default soundfont is silent

 ======== MuseScore 0.9.6.2 released ==============
15.aug (la)
      - fix #6658: Natural in every keysig on mac PPC
      - fix #6508: Crash removing instrument with volta
      - fix #6706: Crash when inserting slurs from palette while editing text
      - fix #6740: Autosave works only the first time
10.aug (ws)