@@ -1,3 +1,5 @@
+10.oct (db)
+      - fix: Local Handbook disabled when no file is open
 28.sep (ws)
       - limit values in time signature wizard to 6 bit (1-63)
         (#7315)
